[gd_scene load_steps=23 format=3 uid="uid://bodetw4ekbg6m"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_5xaed"]
[ext_resource type="Texture2D" uid="uid://b7bhfff65p05s" path="res://assets/menus/pause_menu/pause_bg.png" id="2_dqjpn"]
[ext_resource type="Texture2D" uid="uid://c0xa82njwuxyf" path="res://assets/menus/pause_menu/cd_player.png" id="3_g7dl0"]
[ext_resource type="Script" path="res://scenes/Levels/magic_maker_lvl_0.gd" id="4_casfo"]
[ext_resource type="PackedScene" uid="uid://g1prutamg2s3" path="res://scenes/particles/magic_particles.tscn" id="5_top0c"]
[ext_resource type="Texture2D" uid="uid://mecy8ne57lvf" path="res://assets/cursor_sprite.png" id="6_qslsk"]
[ext_resource type="Texture2D" uid="uid://bl0ucg14b8jx6" path="res://assets/menus/pause_menu/pause_dither2.png" id="7_f2okk"]
[ext_resource type="Texture2D" uid="uid://dtgg28ru21x04" path="res://assets/menus/pause_menu/pause_dither1.png" id="8_gec25"]
[ext_resource type="Texture2D" uid="uid://cd87ildvvro66" path="res://assets/menus/pause_menu/pause_resume.png" id="9_p1g1s"]
[ext_resource type="Texture2D" uid="uid://ctomyqmljc8u7" path="res://assets/menus/pause_menu/pause_quit.png" id="10_6ewqu"]
[ext_resource type="Texture2D" uid="uid://wo4bo6ujd65d" path="res://assets/menus/pause_menu/pause_paused.png" id="11_3sdux"]
[ext_resource type="Texture2D" uid="uid://bl6cuso4hcajg" path="res://assets/menus/pause_menu/volume_slider.png" id="12_ab6y2"]
[ext_resource type="Texture2D" uid="uid://dvci6uno1x6ai" path="res://assets/menus/pause_menu/pause_restart.png" id="12_m3hfo"]
[ext_resource type="Texture2D" uid="uid://bnkvw0xm02xiq" path="res://assets/menus/pause_menu/pause_quit_light.png" id="13_4ftuu"]
[ext_resource type="Texture2D" uid="uid://cstef3d4kfpl3" path="res://assets/menus/pause_menu/resume_light.png" id="14_2fs2k"]
[ext_resource type="Texture2D" uid="uid://bccgw244kr2lc" path="res://assets/menus/pause_menu/restart_light.png" id="15_3xkpy"]
[ext_resource type="Texture2D" uid="uid://bmj7oc24enfeu" path="res://assets/menus/pause_menu/pause_volume.png" id="18_1pak0"]
[ext_resource type="AudioStream" uid="uid://2qttiuahjq0e" path="res://sounds/youtube_XXvuUp-KY5g_audio.mp3" id="18_bgku8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yoyvr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("8_gec25")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("8_gec25")
}, {
"duration": 1.0,
"texture": ExtResource("8_gec25")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}, {
"duration": 1.0,
"texture": ExtResource("7_f2okk")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22bup"]
bg_color = Color(1.92523e-07, 0.64131, 0.749495, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0.730782, 0.659584, 0.904647, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4xqa"]
bg_color = Color(0, 0.941672, 0.951099, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10
expand_margin_top = 5.0
expand_margin_right = 6.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bpam"]
bg_color = Color(0, 0.941176, 0.952941, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10
expand_margin_top = 5.0
expand_margin_right = 6.0
expand_margin_bottom = 5.0

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_5xaed")

[node name="Magic_maker_Lvl_0" type="Node2D" parent="."]
script = ExtResource("4_casfo")

[node name="Magic" parent="Magic_maker_Lvl_0" instance=ExtResource("5_top0c")]
lifetime = 0.5

[node name="cursor_sprite" type="Sprite2D" parent="Magic_maker_Lvl_0"]
texture_filter = 1
texture = ExtResource("6_qslsk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1280, 720)
texture = ExtResource("2_dqjpn")

[node name="CDPlayer" type="Sprite2D" parent="."]
position = Vector2(1280, 720)
texture = ExtResource("3_g7dl0")

[node name="PausedDither" type="AnimatedSprite2D" parent="."]
position = Vector2(1280, 720)
sprite_frames = SubResource("SpriteFrames_yoyvr")
autoplay = "default"
frame_progress = 0.141413

[node name="Quit" type="Node" parent="."]

[node name="QuitHoverArea" type="Area2D" parent="Quit"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Quit/QuitHoverArea"]
visible = false
position = Vector2(-333, -43)
polygon = PackedVector2Array(1666, 474, 1691, 591, 1906, 549, 1908, 529, 1914, 513, 1893, 432, 1938, 362, 1916, 348, 1723, 381)

[node name="PointLight2D" type="PointLight2D" parent="Quit"]
visible = false
position = Vector2(1280, 720)
color = Color(0, 0.572204, 0.0808477, 1)
energy = 5.0
texture = ExtResource("13_4ftuu")
height = 10.0

[node name="Resume" type="Node" parent="."]

[node name="ResumeHoverArea" type="Area2D" parent="Resume"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Resume/ResumeHoverArea"]
visible = false
position = Vector2(-331, -43)
polygon = PackedVector2Array(1912, 528, 1916, 548, 2250, 482, 2227, 355, 2263, 303, 2253, 270, 2214, 271, 2203, 293, 1956, 340, 1899, 430, 1919, 515)

[node name="PointLight2D" type="PointLight2D" parent="Resume"]
visible = false
position = Vector2(1280, 720)
color = Color(0.298178, 0.59852, 1, 1)
energy = 1.5
texture = ExtResource("14_2fs2k")

[node name="Restart" type="Node" parent="."]

[node name="RestartHoverArea" type="Area2D" parent="Restart"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Restart/RestartHoverArea"]
visible = false
position = Vector2(2022, 348)
polygon = PackedVector2Array(-97, 91, 110, 53, 139, -5, 136, -32, 157, -67, 132, -138, -70, -106, -119, -34)

[node name="PointLight2D" type="PointLight2D" parent="Restart"]
visible = false
position = Vector2(1280, 720)
color = Color(0.394849, 0.337693, 1, 1)
energy = 3.0
texture = ExtResource("15_3xkpy")

[node name="VolumeSlider" type="HSlider" parent="."]
offset_left = 1601.0
offset_top = 495.0
offset_right = 2308.0
offset_bottom = 640.0
rotation = -0.194825
theme_override_icons/grabber = ExtResource("12_ab6y2")
theme_override_icons/grabber_highlight = ExtResource("12_ab6y2")
theme_override_icons/grabber_disabled = ExtResource("12_ab6y2")
theme_override_styles/slider = SubResource("StyleBoxFlat_22bup")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m4xqa")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_4bpam")
value = 50.0
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
position = Vector2(0, 7)
stream = ExtResource("18_bgku8")

[node name="Resume2" type="Sprite2D" parent="."]
modulate = Color(5.49894e-06, 0.0962857, 0.332815, 1)
position = Vector2(1280, 720)
texture = ExtResource("9_p1g1s")

[node name="Quit2" type="Sprite2D" parent="."]
modulate = Color(0.00042124, 0.0832513, 0.391665, 1)
position = Vector2(1280, 720)
texture = ExtResource("10_6ewqu")

[node name="Paused" type="Sprite2D" parent="."]
visible = false
modulate = Color(7.79718e-06, 0.776497, 0.545235, 1)
position = Vector2(2288, 528)
texture = ExtResource("11_3sdux")

[node name="PausedLight" type="PointLight2D" parent="."]
position = Vector2(1262, 688)
scale = Vector2(1.1, 1.1)
color = Color(0.909443, 0.106937, 0.320768, 1)
energy = 12.0
texture = ExtResource("11_3sdux")
height = 30.0

[node name="Restart2" type="Sprite2D" parent="."]
modulate = Color(0, 0.144768, 0.251047, 1)
position = Vector2(1280, 720)
texture = ExtResource("12_m3hfo")

[node name="Volume" type="Sprite2D" parent="."]
modulate = Color(0.376471, 0.0352941, 0.223529, 1)
position = Vector2(1272, 697)
scale = Vector2(0.641667, 0.641667)
texture = ExtResource("18_1pak0")

[node name="Resume3" type="Button" parent="."]
process_mode = 2
visible = false
offset_left = 218.0
offset_top = 128.0
offset_right = 410.0
offset_bottom = 162.0
text = "Resume"
metadata/_edit_use_anchors_ = true

[node name="Main Menu" type="Button" parent="."]
process_mode = 2
visible = false
offset_left = 219.0
offset_top = 228.0
offset_right = 409.0
offset_bottom = 262.0
text = "Main Menu
"
metadata/_edit_use_anchors_ = true

[node name="Restart3" type="Button" parent="."]
process_mode = 2
visible = false
offset_left = 220.0
offset_top = 178.0
offset_right = 408.0
offset_bottom = 212.0
text = "Restart Level
"
metadata/_edit_use_anchors_ = true

[node name="Quit3" type="Button" parent="."]
process_mode = 2
visible = false
offset_left = 219.0
offset_top = 278.0
offset_right = 409.0
offset_bottom = 312.0
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Volume_Slider" type="HSlider" parent="."]
process_mode = 2
visible = false
offset_left = 198.0
offset_top = 329.0
offset_right = 428.0
offset_bottom = 345.0
value = 50.0
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="Quit/QuitHoverArea" to="." method="_on_quit_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="Quit/QuitHoverArea" to="." method="_on_quit_hover_area_mouse_exited"]
[connection signal="mouse_entered" from="Resume/ResumeHoverArea" to="." method="_on_resume_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="Resume/ResumeHoverArea" to="." method="_on_resume_hover_area_mouse_exited"]
[connection signal="mouse_entered" from="Restart/RestartHoverArea" to="." method="_on_restart_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="Restart/RestartHoverArea" to="." method="_on_restart_hover_area_mouse_exited"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
